[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/SteamLobby/SteamLobbyList.gd" type="Script" id=2]
[ext_resource path="res://ui/SteamLobby/LobbyEntry.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Window/Window.gd" type="Script" id=4]
[ext_resource path="res://ui/exclamationmarks.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="SteamLobbyList" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.0
margin_top = -156.0
margin_right = 266.0
margin_bottom = 112.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 320.0 ]
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NetworkSetupScreen" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0

[node name="Panel" type="Panel" parent="NetworkSetupScreen"]
margin_right = 532.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="NetworkSetupScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 10 )
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NetworkSetupScreen/Panel/MarginContainer"]
margin_left = 2.0
margin_right = 530.0
margin_bottom = 14.0
custom_constants/separation = 8

[node name="LobbyName" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 93.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.75
text = "Lobby Name"

[node name="Version" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_left = 101.0
margin_top = 1.0
margin_right = 354.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.02
text = "Game Version"
align = 1

[node name="Version2" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_left = 362.0
margin_top = 1.0
margin_right = 457.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Custom Characters"
align = 1

[node name="PlayerCount" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_left = 465.0
margin_top = 1.0
margin_right = 528.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Player Count"
align = 2

[node name="LobbyListContainer" type="ScrollContainer" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 15.0
margin_right = 532.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyList" type="VBoxContainer" parent="NetworkSetupScreen/LobbyListContainer"]
unique_name_in_owner = true
margin_right = 526.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyEntry" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 526.0
margin_bottom = 20.0

[node name="LobbyEntry2" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 526.0
margin_bottom = 41.0

[node name="LobbyEntry3" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 526.0
margin_bottom = 62.0

[node name="LobbyEntry4" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 63.0
margin_right = 526.0
margin_bottom = 83.0

[node name="LobbyEntry5" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 526.0
margin_bottom = 104.0

[node name="LobbyEntry6" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 105.0
margin_right = 526.0
margin_bottom = 125.0

[node name="LobbyEntry7" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 526.0
margin_bottom = 146.0

[node name="LobbyEntry8" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 147.0
margin_right = 526.0
margin_bottom = 167.0

[node name="LobbyEntry9" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 526.0
margin_bottom = 188.0

[node name="LobbyEntry10" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 189.0
margin_right = 526.0
margin_bottom = 209.0

[node name="LobbyEntry11" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 526.0
margin_bottom = 230.0

[node name="LobbyEntry12" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 231.0
margin_right = 526.0
margin_bottom = 251.0

[node name="LobbyEntry13" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 526.0
margin_bottom = 272.0

[node name="LobbyEntry14" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 273.0
margin_right = 526.0
margin_bottom = 293.0

[node name="LobbyEntry15" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 294.0
margin_right = 526.0
margin_bottom = 314.0

[node name="LobbyEntry16" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 315.0
margin_right = 526.0
margin_bottom = 335.0

[node name="LobbyEntry17" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 526.0
margin_bottom = 356.0

[node name="NetworkErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 128.0
margin_right = 337.0
margin_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectingLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -5.5
margin_right = 168.0
margin_bottom = 5.5
text = "Connecting to Steam..."
align = 1

[node name="LobbyConnectingLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -5.5
margin_right = 168.0
margin_bottom = 5.5
text = "Connecting to lobby..."
align = 1

[node name="RefreshTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -18.0
margin_top = 1.0
margin_right = 226.0
margin_bottom = 52.0
align = 1
valign = 1
autowrap = true

[node name="CreateLobbyDialog" type="Control" parent="."]
margin_left = -59.0
margin_top = 2.0
margin_right = 277.0
margin_bottom = 268.0
mouse_filter = 2

[node name="HostContainer" type="HBoxContainer" parent="CreateLobbyDialog"]
unique_name_in_owner = true
margin_left = 61.0
margin_top = 268.0
margin_right = 135.0
margin_bottom = 299.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CreateLobbyDialog/HostContainer"]
margin_right = 74.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="CreateLobbyButton" type="Button" parent="CreateLobbyDialog/HostContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 74.0
margin_bottom = 18.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "ChallengeButton"
text = "create lobby"

[node name="PublicButton" type="CheckButton" parent="CreateLobbyDialog/HostContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 74.0
margin_bottom = 31.0
theme_type_variation = "ChallengeButton"
pressed = true
text = "public"

[node name="LobbySize" type="HSlider" parent="CreateLobbyDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 202.0
margin_top = 287.0
margin_right = -49.0
margin_bottom = 33.0
min_value = 2.0
max_value = 32.0
value = 16.0

[node name="LobbySizeLabel" type="Label" parent="CreateLobbyDialog"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -198.0
margin_top = 21.0
margin_right = -136.0
margin_bottom = 33.0
text = "max players:"

[node name="LobbySizeLabelCount" type="Label" parent="CreateLobbyDialog"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = 21.0
margin_right = -4.0
margin_bottom = 33.0
text = "16"

[node name="LobbyName" type="LineEdit" parent="CreateLobbyDialog"]
unique_name_in_owner = true
margin_left = 137.0
margin_top = 268.0
margin_right = 302.0
margin_bottom = 286.0
max_length = 64
placeholder_text = "lobby name"
caret_blink = true
caret_blink_speed = 0.5

[node name="Control" type="Control" parent="CreateLobbyDialog"]
visible = false
margin_left = -237.0
margin_top = 267.0
margin_right = 572.0
margin_bottom = 436.0

[node name="CharloaderButton" type="CheckButton" parent="CreateLobbyDialog"]
unique_name_in_owner = true
margin_left = 61.0
margin_top = 300.0
margin_right = 205.0
margin_bottom = 312.0
hint_tooltip = "Requires mods to be enabled."
custom_colors/font_color = Color( 0.396078, 0.901961, 1, 1 )
custom_colors/font_color_hover = Color( 0.396078, 0.901961, 1, 1 )
custom_colors/font_color_pressed = Color( 0.396078, 0.901961, 1, 1 )
text = "allow custom characters"

[node name="Panel" type="Panel" parent="CreateLobbyDialog"]
show_behind_parent = true
margin_left = 59.0
margin_top = 266.0
margin_right = 304.0
margin_bottom = 314.0
mouse_filter = 2

[node name="ExclamationButton" type="Button" parent="CreateLobbyDialog"]
unique_name_in_owner = true
visible = false
margin_left = 205.0
margin_top = 295.0
margin_right = 217.0
margin_bottom = 313.0
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="CodeSearch" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 372.0
margin_top = -17.0
margin_right = 494.0
margin_bottom = -1.0
align = 1
max_length = 6
placeholder_text = "search by lobby code"
caret_blink = true
caret_blink_speed = 0.5

[node name="SearchButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -37.0
margin_top = -285.0
margin_bottom = -269.0
size_flags_horizontal = 0
text = "search"

[node name="FilterIncompatibleButton" type="CheckButton" parent="."]
unique_name_in_owner = true
margin_left = 41.0
margin_top = -17.0
margin_right = 129.0
margin_bottom = -1.0
pressed = true
text = "same version"

[node name="SortButton" type="OptionButton" parent="."]
unique_name_in_owner = true
margin_left = 130.0
margin_top = -17.0
margin_right = 166.0
margin_bottom = -1.0
text = "sort by player count"
clip_text = true
items = [ "sort by player count", null, false, 0, null, "sort by name", null, false, 1, null ]
selected = 0

[node name="CustomCharLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 189.0
margin_top = -19.0
margin_right = 285.0
margin_bottom = -2.0
text = "custom characters"
valign = 1
clip_text = true

[node name="CustomCharOn" type="CheckBox" parent="."]
unique_name_in_owner = true
margin_left = 286.0
margin_top = -19.0
margin_right = 328.0
margin_bottom = -2.0
pressed = true
text = "on"
clip_text = true

[node name="CustomCharOff" type="CheckBox" parent="."]
unique_name_in_owner = true
margin_left = 329.0
margin_top = -19.0
margin_right = 371.0
margin_bottom = -2.0
pressed = true
text = "off"
clip_text = true

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_bottom = 18.0
size_flags_horizontal = 0
text = "go back"

[node name="RefreshButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -285.0
margin_right = 40.0
margin_bottom = -269.0
size_flags_horizontal = 0
text = "refresh"

[node name="Label" type="Label" parent="."]
margin_left = 251.0
margin_top = 276.0
margin_right = 613.0
margin_bottom = 329.0
autowrap = true

[node name="LobbySettingsChangedWindow" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -58.0
margin_right = 126.0
margin_bottom = 58.0
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="LobbySettingsChangedWindow"]
margin_left = 1.0
margin_top = 1.0
margin_right = 251.0
margin_bottom = 115.0

[node name="TitleBar" type="Panel" parent="LobbySettingsChangedWindow/VBoxContainer"]
margin_right = 250.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 9 )
mouse_filter = 1
size_flags_horizontal = 3

[node name="Title" type="Label" parent="LobbySettingsChangedWindow/VBoxContainer/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = 2.0
mouse_filter = 1
text = "Hello! "
align = 1

[node name="Contents" type="PanelContainer" parent="LobbySettingsChangedWindow/VBoxContainer"]
margin_top = 10.0
margin_right = 250.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="LobbySettingsChangedWindow/VBoxContainer/Contents"]
margin_right = 250.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="LobbySettingsChangedWindow/VBoxContainer/Contents/VBoxContainer"]
margin_top = 5.0
margin_right = 250.0
margin_bottom = 86.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Custom characters are now disabled on new lobbies by default, to balance out the modded-to-vanilla lobby ratio.

Don't forget to enable the option if you want to make a lobby with modded characters!"
align = 1
autowrap = true

[node name="LobbySettingsChangeWindowButton" type="Button" parent="LobbySettingsChangedWindow/VBoxContainer/Contents/VBoxContainer"]
margin_left = 96.0
margin_top = 92.0
margin_right = 153.0
margin_bottom = 104.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
text = "okey dokey"

[connection signal="visibility_changed" from="." to="." method="_on_SteamLobbyList_visibility_changed"]
[connection signal="value_changed" from="CreateLobbyDialog/LobbySize" to="." method="_on_LobbySize_value_changed"]
[connection signal="pressed" from="CreateLobbyDialog/ExclamationButton" to="." method="_on_ExclamationButton_pressed"]
[connection signal="text_entered" from="CodeSearch" to="." method="_on_CodeSearch_text_entered"]
[connection signal="pressed" from="SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="toggled" from="FilterIncompatibleButton" to="." method="_on_FilterIncompatibleButton_toggled"]
[connection signal="item_selected" from="SortButton" to="." method="_on_SortButton_item_selected"]
[connection signal="toggled" from="CustomCharOn" to="." method="_on_CustomCharOn_toggled"]
[connection signal="toggled" from="CustomCharOff" to="." method="_on_CustomCharOff_toggled"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="LobbySettingsChangedWindow/VBoxContainer/Contents/VBoxContainer/LobbySettingsChangeWindowButton" to="." method="_on_LobbySettingsChangeWindowButton_pressed"]
